--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Hello
-description: Bookmark this to keep an eye on my project updates!
+title: Songyu Ye
+description: My academic website
