--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
   About Me: "/aboutme"
   Travel: "/travel"
   Writing: "/writing"
-  Turkish: "/turkish"
+  Language: "/language"
 
 
 
