--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ social-network-links:
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-  instagram: doit4song
+  instagram: songyu_travels
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
