--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@ title: Songyu Ye (叶松瑜）
 # --- List of links in the navigation bar --- #
 ###############################################
 
-
+navbar-links:
+  About Me: "aboutme"
+  Writing: "writing"
 
 
 pagination:
